k8s/app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mindx-projects
  labels:
    name: mindx-projects
