k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: mindx-projects
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/preserve-host: "true"
    konghq.com/plugins: "cors-plugin,rate-limiting-plugin"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - banv-app-dev.mindx.edu.vn
      secretName: frontend-tls
  rules:
    - host: banv-app-dev.mindx.edu.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: mindx-projects
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "true"
    konghq.com/plugins: "key-auth-plugin,cors-plugin,rate-limiting-plugin"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - banv-api-dev.mindx.edu.vn
      secretName: backend-tls
  rules:
    - host: banv-api-dev.mindx.edu.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
